--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="crime_hint_title">Enter title for crime</string>
+    <string name="crime_detail_label">Details</string>
+    <string name="crime_title_label">Title</string>
+    <string name="crime_solved_label">Solved</string>
+    <string name="date_picker_title">Date of crime:</string>
+    <string name="new_crime">New Crime</string>
+    <string name="show_sub">Show Subtitle</string>
+    <string name="hide_sub">Hide Subtitle</string>
+    <string name="sub_format">%1$s crimes</string>
 </resources>
